# NurseryMenu

./: CMakeLists.txt  Main.qml  backend.cpp  backend.h  database.cpp  database.h  main.cpp  menu.cpp  menu.h
View/: Header1.qml  Input_drop_down.qml  Input_field.qml  Left_panel.qml  Main.qml  Menu.qml
